--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-something on it
+<!DOCTYPE html>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+
+  <body>
+    <header>
+      <div>
+        <span>Header Logo</span>
+        <ul>
+          <li>header link one</li>
+          <li>header link two</li>
+          <li>header link three/li>
+        </ul>
+      </div>
+      <div>
+        <div>
+          <span>This Website is awesome</span>
+          <p>This website has some subtext that goes here under
+            the main title. It's a smaller font and the color is lower
+            contrast.
+          </p>
+          <button>Sign Up</button>
+        </div>
+        <div>
+          this is a placeholder for an image
+        </div>
+      </div>
+    </header>
+
+    <div>
+      <div>
+        <div>
+          <!--Remember replacing the images for actual square blocks in the css-->
+          <img src="../project-landing-page/images.png" alt="red-image"></div>
+        <div>this is some subtext under an illustration or image</div>
+      </div>
+      <div>
+        <div><img src="../project-landing-page/images.png" alt="red-image"></div>
+        <div>this is some subtext under an illustration or image</div>
+      </div>
+      <div>
+        <div><img src="../project-landing-page/images.png" alt="red-image"></div>
+        <div>this is some subtext under an illustration or image</div>
+      </div>
+      <div>
+        <div><img src="../project-landing-page/images.png" alt="red-image"></div>
+        <div>this is some subtext under an illustration or image</div>
+      </div>
+    </div>
+
+    <div>
+      <div>
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's just 
+        filling up space, or maybe people will actually read it. Who knows? All I
+        know is that it looks nice.
+      </div>
+      <div>-Thor, God of Thunder</div>
+    </div>
+
+    <div>
+      <div>
+        <div>
+          <span>Call to action! It's time!</span>
+          <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
+      </div>
+    </div>
+
+    <div>
+      Copyright © The Odin Project 2025
+    </div>
+  </body>
+</html>
