style header tab

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
   <body>
     <header>
-      <div>
-        <span>Header Logo</span>
+      <div class="header-tab">
+        <span class="header-logo">Header Logo</span>
         <ul>
           <li>header link one</li>
           <li>header link two</li>
-          <li>header link three/li>
+          <li>header link three</li>
         </ul>
       </div>
-      <div>
+      <div class="header-content">
         <div>
           <span>This Website is awesome</span>
           <p>This website has some subtext that goes here under
