--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <div class="header-tab">
-        <span class="header-logo">Header Logo</span>
+        <div class="header-logo">Header Logo</div>
         <ul>
           <li>header link one</li>
           <li>header link two</li>
@@ -20,15 +20,15 @@
         </ul>
       </div>
       <div class="header-content">
-        <div>
-          <span>This Website is awesome</span>
-          <p>This website has some subtext that goes here under
+        <div class="left-content">
+          <div class="main-text">This website is awesome</div>
+          <p class="white-text">This website has some subtext that goes here under
             the main title. It's a smaller font and the color is lower
             contrast.
           </p>
-          <button>Sign Up</button>
+          <button class="button-one white-text">Sign up</button>
         </div>
-        <div>
+        <div class="placeholder white-text">
           this is a placeholder for an image
         </div>
       </div>
@@ -67,8 +67,8 @@
     <div>
       <div>
         <div>
-          <span>Call to action! It's time!</span>
-          <p>Sign up for our product by clicking that button right over there!</p>
+          <div>Call to action! It's time!</div>
+          <p class="white-text">Sign up for our product by clicking that button right over there!</p>
         </div>
         <button>Sign up</button>
       </div>
