--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -28,33 +27,28 @@
           </p>
           <button class="button-one white-text">Sign up</button>
         </div>
-        <div class="placeholder white-text">
-          this is a placeholder for an image
-        </div>
+        <div class="placeholder white-text">this is a placeholder for an image</div>
       </div>
     </header>
-
-    <div>
-      <div>
-        <div>
-          <!--Remember replacing the images for actual square blocks in the css-->
-          <img src="../project-landing-page/images.png" alt="red-image"></div>
-        <div>this is some subtext under an illustration or image</div>
+    <h1>Some random information.</h1>
+    <div class="container-one">
+      <div class="info">
+        <img src="../project-landing-page/images.png" alt="red-image">
+        <div class="description">this is some subtext under an illustration or image</div>
       </div>
-      <div>
-        <div><img src="../project-landing-page/images.png" alt="red-image"></div>
-        <div>this is some subtext under an illustration or image</div>
+      <div class="info">
+        <img  src="../project-landing-page/images.png" alt="red-image">
+        <div class="description">this is some subtext under an illustration or image</div>
       </div>
-      <div>
-        <div><img src="../project-landing-page/images.png" alt="red-image"></div>
-        <div>this is some subtext under an illustration or image</div>
+      <div class="info">
+        <img src="../project-landing-page/images.png" alt="red-image">
+        <div class="description">this is some subtext under an illustration or image</div>
       </div>
-      <div>
-        <div><img src="../project-landing-page/images.png" alt="red-image"></div>
-        <div>this is some subtext under an illustration or image</div>
+      <div class="info">
+        <img src="../project-landing-page/images.png" alt="red-image">
+        <div class="description">this is some subtext under an illustration or image</div>
       </div>
     </div>
-
     <div>
       <div>
         This is an inspiring quote, or a testimonial from a customer. Maybe it's just 
