--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <div class="description">this is some subtext under an illustration or image</div>
       </div>
     </div>
-    <div>
-      <div>
-        This is an inspiring quote, or a testimonial from a customer. Maybe it's just 
+    <div class="container-two">
+      <div class="quote">
+        <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just 
         filling up space, or maybe people will actually read it. Who knows? All I
-        know is that it looks nice.
+        know is that it looks nice.</em>
       </div>
-      <div>-Thor, God of Thunder</div>
+      <div class="author">-Thor, God of Thunder</div>
     </div>
 
     <div>
