--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
       <div class="author">-Thor, God of Thunder</div>
     </div>
 
-    <div>
-      <div>
-        <div>
-          <div>Call to action! It's time!</div>
+    <div class="container-three">
+      <div class="window">
+        <div class="window-left">
+          <div class="white-text action">Call to action! It's time!</div>
           <p class="white-text">Sign up for our product by clicking that button right over there!</p>
         </div>
-        <button>Sign up</button>
+        <button class="button-two">Sign up</button>
       </div>
     </div>
 
